fixed issue with responsiveness on mobile devices

--- a/resources/sass/_skills.scss
+++ b/resources/sass/_skills.scss
@@ -45,3 +45,9 @@
     }
   }
 }
+
+@media (max-width: 992px) {
+    #skills:after {
+      display: none;
+    }
+  }
